--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -25,6 +25,7 @@
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
     "babel-eslint": "^10.1.0",
+    "chart.js": "^2.9.4",
     "eslint": "^7.15.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "prettier": "^2.2.1",
@@ -34,6 +35,6 @@
     "rollup-plugin-svelte-svg": "^0.2.3",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3"
+    "svelte": "^3.31.0"
   }
 }
