--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.9.4",
     "eslint": "^7.15.0",
     "eslint-plugin-svelte3": "^2.7.3",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
     "rollup": "^2.3.4",
