--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "export": "sapper export --legacy --entry 'ru' --basepath qc-report",
     "start": "node __sapper__/build",
     "clean": "rm -rf ./__sapper__",
     "deploy": "npm run clean && npm run export && node ./scripts/deploy.js"
